--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -5,13 +5,15 @@
 }
 
 body {
-    flex: 1 1 auto;
+    height: 100%;
+    position: relative;
 }
 
 .app__footer {
     background-color: #3B3B3B;
     padding: 40px 0;
     font-family: "Work Sans", sans-serif;
+    flex: 0 0 auto;
 
     &__content {
         display: flex;
@@ -252,9 +254,9 @@ body {
 
     @media (max-width: 820px) {
         .app__footer {
-    
+
             &__content {
-           
+
                 display: flex;
                 flex-direction: column;
 
@@ -298,10 +300,11 @@ body {
                         background: none;
                         align-items: center;
                         width: 100%;
-                        input{
-                            padding:  10px 102px 10px 20px !important;
+
+                        input {
+                            padding: 10px 102px 10px 20px !important;
                         }
-                     
+
 
                         [placeholder~="email"] {
                             font-size: 1rem;
@@ -314,11 +317,12 @@ body {
                             margin-top: 16px;
                             font-size: 1rem;
                             width: 100%;
-                            padding: 12px    !important;
+                            padding: 12px !important;
                             border-radius: 50px;
                             display: flex;
                             justify-content: center;
                             align-items: center;
+
                             img {
                                 display: flex;
                                 padding-right: 5px;
